--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,15 @@
 
 body {
   width: 100%;
-  margin-top: 30px;
+  height: 100%;
   text-align: center;
   background-color: #1c1c1c;
+}
+.container {
+  display: flex;
+  margin-top: 20px;
+  flex-wrap: wrap;
+  padding: 50px;
+  gap: 20px;
+  justify-content: space-between;
 }
